# fastapi_do_zero

./: pyproject.toml
fastapi_do_zero/: app.py
tests/: test_app.py
